--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,11 @@ branches:
   only:
     - master
     - develop
+
+deploy:
+  provider: heroku:git
+  api_key: $HEROKU_API_KEY
+  edge: true
+  app: travis-ci-heroku-aws-example
+  on:
+    branch: develop
