--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ sudo: required
 services:
   - docker
 
-# before_install:
-#   - docker build -t joshnavru/travis-ci-heroku-aws-example .
+before_install:
+  - docker-compose build
 
 script:
   - docker-compose run --rm api yarn test
