--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t joshnavru/example .
 
 script:
-  - docker run -e MONGODB_URL=$MONGODB_URL joshnavru/example yarn test
+  - docker run --network host -e CI=true -e MONGODB_URL=$MONGODB_URL joshnavru/example yarn test
 
 branches:
   only:
